--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,33 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
     tools:showIn="@layout/activity_home"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
 
     <LinearLayout
         android:id="@+id/inside_linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter">
+        android:scaleType="fitCenter"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/welcome"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="32dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="150dp"
+            android:textSize="150sp"
             android:layout_weight="0.1"
             android:gravity="center"
             android:text="@string/instabus"/>
 
     </LinearLayout>
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,5 +35,16 @@
         android:contentDescription="@string/barcelone"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/search_all_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@+id/inside_linear_layout"
+        app:layout_constraintLeft_toLeftOf="@id/inside_linear_layout"
+        app:layout_constraintRight_toRightOf="@id/inside_linear_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:text="@string/liste_des_stations_de_bus"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
