--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeActivity"
-    tools:showIn="@layout/activity_home"
-    android:orientation="horizontal"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".HomeActivity"
+tools:showIn="@layout/activity_home"
+android:orientation="vertical"
+android:weightSum="1"
     >
 
-    <LinearLayout
-        android:id="@+id/inside_linear_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+<LinearLayout
+    android:id="@+id/inside_linear_layout"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
 
-        android:scaleType="fitCenter"
-        tools:ignore="MissingConstraints">
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/search_all_button"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
 
-        <TextView
-            android:id="@+id/welcome"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="150dp"
-            android:textSize="150sp"
-            android:layout_weight="0.1"
-            android:gravity="center"
-            android:text="@string/instabus"/>
+    android:weightSum="1"
+    android:scaleType="fitCenter">
 
-    </LinearLayout>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/fond"
-        android:contentDescription="@string/barcelone"
+
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="match_parent"
+        android:layout_height="288dp"
+        android:layout_marginTop="32dp"
+        android:layout_weight="0.1"
+        android:gravity="center"
+        android:text="@string/instabus"
+        android:textSize="100sp"
         tools:ignore="MissingConstraints" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/barcelone"
+        android:src="@drawable/fond"
+        tools:ignore="MissingConstraints" />
+
+
+
+
+</LinearLayout>
     <Button
         android:id="@+id/search_all_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:layout_constraintTop_toBottomOf="@+id/inside_linear_layout"
         app:layout_constraintLeft_toLeftOf="@id/inside_linear_layout"
         app:layout_constraintRight_toRightOf="@id/inside_linear_layout"
