--- a/app/src/main/res/layout/content_station_detail.xml
+++ b/app/src/main/res/layout/content_station_detail.xml
@@ -13,17 +13,17 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
 
-        android:contentDescription="image de station"
+        android:contentDescription="@string/image_de_station"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/station_image"
 
         tools:src="@drawable/icon"
-        tools:layout_height="200dp" />
+        tools:layout_height="300dp" />
 
     <TextView
-        android:id="@+id/cocktail_name"
+        android:id="@+id/station_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -37,7 +37,64 @@
         app:layout_constraintLeft_toLeftOf="@id/station_image"
         app:layout_constraintRight_toRightOf="@id/station_image"
 
-        tools:text="Margarita"
+        tools:text="Nom de la station"
         />
+
+    <TextView
+        android:id="@+id/longitude_name"
+        style="@style/StationTextStyle"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:padding="10dp"
+
+        android:textColor="@color/colorAccent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/station_image"
+
+        app:layout_constraintRight_toRightOf="@id/station_image"
+        app:layout_constraintTop_toBottomOf="@+id/station_image"
+        tools:text="Longitude" />
+
+    <TextView
+        android:id="@+id/latitude_name"
+        style="@style/StationTextStyle"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:padding="10dp"
+
+        android:textColor="@color/colorAccent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/station_image"
+
+        app:layout_constraintRight_toRightOf="@id/station_image"
+        app:layout_constraintTop_toBottomOf="@+id/station_image"
+        tools:text="Latitude" />
+
+    <TextView
+        android:id="@+id/city_name"
+        style="@style/StationTextStyle"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="152dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:padding="10dp"
+
+        android:textColor="@color/colorAccent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/station_image"
+
+        app:layout_constraintRight_toRightOf="@id/station_image"
+        app:layout_constraintTop_toBottomOf="@+id/station_image"
+        tools:text="Nom de la ville" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
